--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "amplify-adapter",
-	"version": "0.0.9-alpha.0",
-	"description": "Adapter for SvelteKit v1 + Amplify SSR CI/CD",
+	"version": "0.0.9-alpha.1",
+	"description": "Adapter for SvelteKit v2 + Amplify SSR CI/CD",
 	"license": "MIT",
 	"type": "module",
 	"repository": {
@@ -34,14 +34,15 @@
 	},
 	"devDependencies": {
 		"@polka/url": "^1.0.0-next.21",
-		"@sveltejs/kit": "^1.30.3",
-		"@types/node": "^16.18.6",
+		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/vite-plugin-svelte": "^3.0.1",
+		"@types/node": "^20.0.0",
 		"c8": "^8.0.0",
 		"polka": "^1.0.0-next.22",
 		"rimraf": "^5.0.0",
 		"sirv": "^2.0.3",
 		"typescript": "^4.9.4",
-		"vitest": "^0.32.2"
+		"vite": "^5.0.0"
 	},
 	"dependencies": {
 		"@rollup/plugin-commonjs": "^25.0.0",
@@ -50,6 +51,6 @@
 		"rollup": "^3.7.0"
 	},
 	"peerDependencies": {
-		"@sveltejs/kit": "^1.0.0"
+		"@sveltejs/kit": "^2.0.0"
 	}
 }
