--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "amplify-adapter",
-	"version": "0.0.9-alpha.3",
-	"description": "Adapter for SvelteKit v2 + Amplify SSR CI/CD",
+	"version": "0.0.10",
+	"description": "Adapter for SvelteKit v1/v2 + Amplify SSR CI/CD",
 	"license": "MIT",
 	"type": "module",
 	"repository": {
