--- a/package.json
+++ b/package.json
@@ -27,12 +27,13 @@
 	"scripts": {
 		"dev": "rimraf files && rollup -cw",
 		"build": "rimraf files && rollup -c",
-		"check": "tsc",
-		"lint": "prettier --check . --config ../../.prettierrc --ignore-path .gitignore",
-		"format": "npm run lint --write",
-		"prepublishOnly": "npm run build"
+		"lint": "prettier --check .",
+		"format": "prettier --write .",
+		"release": "changeset publish",
+		"changeset": "changeset"
 	},
 	"devDependencies": {
+		"@changesets/cli": "^2.27.1",
 		"@polka/url": "^1.0.0-next.21",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.1",
