--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "amplify-adapter",
-	"version": "0.2.0",
+	"version": "0.2.1",
 	"description": "Adapter for SvelteKit v1/v2 + Amplify SSR CI/CD",
 	"license": "MIT",
 	"type": "module",
@@ -25,8 +25,8 @@
 		"index.d.ts"
 	],
 	"scripts": {
-		"dev": "rimraf files && rollup -cw",
-		"build": "rimraf files && rollup -c",
+		"dev": "rimraf files && rolldown -cw",
+		"build": "rimraf files && rolldown -c",
 		"lint": "prettier --check .",
 		"format": "prettier --write .",
 		"release": "changeset publish",
@@ -41,15 +41,10 @@
 		"c8": "^8.0.0",
 		"polka": "^1.0.0-next.22",
 		"rimraf": "^5.0.0",
+		"rolldown": "^1.0.0-beta.1",
 		"sirv": "^2.0.3",
 		"typescript": "^4.9.4",
 		"vite": "^5.0.0"
-	},
-	"dependencies": {
-		"@rollup/plugin-commonjs": "^25.0.0",
-		"@rollup/plugin-json": "^6.0.0",
-		"@rollup/plugin-node-resolve": "^15.0.1",
-		"rollup": "^3.7.0"
 	},
 	"peerDependencies": {
 		"@sveltejs/kit": "^1.0.0 || ^2.0.0"
