--- a/package.json
+++ b/package.json
@@ -25,12 +25,15 @@
 		"index.d.ts"
 	],
 	"scripts": {
-		"dev": "rimraf files && rolldown -cw",
+		"dev": "rimraf files && rolldown -w -c",
 		"build": "rimraf files && rolldown -c",
 		"lint": "prettier --check .",
 		"format": "prettier --write .",
 		"release": "changeset publish",
 		"changeset": "changeset"
+	},
+	"dependencies": {
+		"rolldown": "^1.0.0-beta.1"
 	},
 	"devDependencies": {
 		"@changesets/cli": "^2.27.1",
@@ -41,7 +44,6 @@
 		"c8": "^8.0.0",
 		"polka": "^1.0.0-next.22",
 		"rimraf": "^5.0.0",
-		"rolldown": "^1.0.0-beta.1",
 		"sirv": "^2.0.3",
 		"typescript": "^4.9.4",
 		"vite": "^5.0.0"
