feat: agregar script para versión de cambios en release:next

--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
 		"lint": "prettier --check .",
 		"format": "prettier --write .",
 		"release": "changeset publish",
-		"changeset": "changeset"
+		"changeset": "changeset",
+		"release:next": "changeset version --tag next"
 	},
 	"dependencies": {
 		"rolldown": "^1.0.0-beta.1"
