--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
 	"devDependencies": {
 		"@changesets/cli": "^2.27.1",
 		"@polka/url": "^1.0.0-next.21",
-		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/kit": "^2.4.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.1",
 		"@types/node": "^20.0.0",
 		"c8": "^8.0.0",
@@ -51,6 +51,6 @@
 		"vite": "^5.0.0"
 	},
 	"peerDependencies": {
-		"@sveltejs/kit": "^1.0.0 || ^2.0.0"
+		"@sveltejs/kit": "^2.4.0"
 	}
 }
