--- a/.github/workflows/release-next.yml
+++ b/.github/workflows/release-next.yml
@@ -37,6 +37,11 @@ jobs:
       - name: Version and Publish Next Release
         run: |
           pnpm changeset version --tag next
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git add .
+          git commit -m "ci: version and changelog for next release"
+          git push
           pnpm publish --tag next
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
