--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -4,11 +4,12 @@
   "commit": false,
   "fixed": [],
   "linked": [],
-  "access": "restricted",
+  "access": "public",
   "baseBranch": "main",
   "updateInternalDependencies": "patch",
   "ignore": [],
   "pre": {
     "tag": "next"
-  }
+  },
+  "publishBranch": "main"
 }
