--- a/.github/workflows/release-next.yml
+++ b/.github/workflows/release-next.yml
@@ -40,7 +40,7 @@ jobs:
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add .
-          git commit -m "ci: version and changelog for next release"
+          git commit -m "ci: version and changelog for next release" || true
           git push
           pnpm publish --tag next
         env:
