--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "amplify-adapter",
-	"version": "1.2.3",
+	"name": "@siddharatha/amplify-adapter",
+	"version": "1.2.4",
 	"description": "Adapter for SvelteKit v1/v2 + Amplify SSR CI/CD",
 	"license": "MIT",
 	"type": "module",
@@ -32,7 +32,9 @@
 		"release": "changeset publish",
 		"changeset": "changeset",
 		"version:next": "changeset version --tag next",
-		"release:next": "pnpm publish --tag next"
+		"release:next": "pnpm publish --tag next",
+		"test": "vitest run",
+		"test:watch": "vitest"
 	},
 	"dependencies": {
 		"rolldown": "^1.0.0-beta.1"
@@ -48,7 +50,8 @@
 		"rimraf": "^5.0.0",
 		"sirv": "^2.0.3",
 		"typescript": "^4.9.4",
-		"vite": "^5.0.0"
+		"vite": "^5.0.0",
+		"vitest": "^4.0.17"
 	},
 	"peerDependencies": {
 		"@sveltejs/kit": "^2.4.0"
